--- a/netsim/templates/provider/libvirt/sonic-domain.j2
+++ b/netsim/templates/provider/libvirt/sonic-domain.j2
@@ -1,5 +1,6 @@
     {{ name }}.vm.synced_folder ".", "/vagrant", id: "vagrant-root", disabled: true
-
+    {{ name }}.ssh.insert_key = false
+    {{ name }}.ssh.shell = "sonic-cli"
     {{ name }}.vm.provider :libvirt do |domain|
       domain.cpus = 4
       domain.memory = 16384
